Fix hr spacing glitch

--- a/_sass/forest/_layout.scss
+++ b/_sass/forest/_layout.scss
@@ -863,6 +863,7 @@ hr.visible {
   border: none;
   border-top: $green-border-thin;
   margin: $spacing-unit/2 $spacing-unit;
+  height: 0;
 }
 ul.inline-list {
   margin-left: 0;
